Alteração do link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h3 class="h4">Contato</h3>
                 <ul class="list-unstyled">
                     <li><i class="bi bi-telephone ms-3"></i><strong>&nbsp; (85) 99995-7020</strong> </li>
-                    <li><i class="bi bi-envelope ms-3"></i><a href="mailto:wandersondias1979@gmail.com" class="">&nbsp; wandersondias1979@gmail.com</a></li>
+                    <li><i class="bi bi-envelope ms-3"></i><a href="mailto:wandersondias1979@gmail.com" target="_blank">&nbsp; wandersondias1979@gmail.com</a></li>
                 </ul>
 
                 <h3 class="h4">Links</h3>
