--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 <h3 class="h4">Contato</h3>
                 <ul class="list-unstyled">
                     <li><i class="bi bi-telephone ms-3"></i><strong>&nbsp; (85) 99995-7020</strong> </li>
-                    <li><i class="bi bi-envelope ms-3"></i><a href="mailto:wandersondias1979@gmail.com" target="_blank">&nbsp; wandersondias1979@gmail.com</a></li>
+                    <li><i class="bi bi-envelope ms-3"></i><a href="mailto:wandersondias1979@gmail.com">&nbsp; wandersondias1979@gmail.com</a></li>
                 </ul>
 
                 <h3 class="h4">Links</h3>
                 <ul class="list-unstyled">
-                    <li class="list-group-item ms-3"><a href="https://www.linkedin.com/in/wandersondeassisdias/"><i class="bi bi-linkedin"></i>&nbsp;linkedin.com/in/wandersondeassisdias/</a></li>
-                    <li class="list-group-item ms-3"><a href="https://github.com/WanDias"><i class="bi bi-github"></i>&nbsp;github.com/WanDias</a></li>
+                    <li class="list-group-item ms-3"><a href="https://www.linkedin.com/in/wandersondeassisdias/" target="_blank"><i class="bi bi-linkedin"></i>&nbsp;linkedin.com/in/wandersondeassisdias/</a></li>
+                    <li class="list-group-item ms-3"><a href="https://github.com/WanDias" target="_blank"><i class="bi bi-github"></i>&nbsp;github.com/WanDias</a></li>
                 </ul>
 
                 
